@@ -1,4 +1,4 @@
-# This Build.PL for Catmandu-Breaker was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
+# This Build.PL for Catmandu-Breaker was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
 use strict;
 use warnings;
 
